# Nudeny-python-module

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
nudeny.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nudeny/: __init__.py  nudeny.py
